--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
+    <!-- SEMPRE QUE FIZER O CARROCEL DE IMAGENS COLOCAR "https: antes poi não vem quando o enderço é copiado" -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 
@@ -15,9 +16,9 @@
 </head>
 <body>
    <header>
-       <div class="container">
+       <div class="container3">
         <h1>
-            EBAC Motors
+            WEB Motors
         </h1>
         <div class="menu-hamburguer">
             <span></span>
@@ -49,15 +50,262 @@
         <img src="./images/images/slide2.png" alt="Carro da BMW">
         <img src="images/images/slide3.png" alt="Carro da Ford">
    </div>
+
+   <section id="sobre-a-loja">
+        <div class="container container-flex">
+            <img id="imsb" src="./images/images/loja.jpg" alt="imagen da loja EBAC Motors">
+            <div>
+                <h2>
+                    Sobre a WEB Motors
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sunt ab, deserunt vel earum, maxime consequatur amet temporibus ipsa eaque quis facilis architecto, recusandae quidem voluptate totam iste dolorum exercitationem?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sunt ab, deserunt vel earum, maxime consequatur amet temporibus ipsa eaque quis facilis architecto, recusandae quidem voluptate totam iste dolorum exercitationem?
+                </p>
+            </div>
+        </div>
+   </section>
+
+   <section>
+        <div class="container ">
+            <h2>
+                Em destaque
+            </h2>
+            <ul class="container2">
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+            <div class="box">
+                <li>
+                    <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                    <h3>
+                        Carro BMW
+                    </h3>
+                    <p>
+                        Câmbio automatico, 4 portas, 
+                    </p>
+                  <div class="price">
+                    <strong>
+                        R$ 75.000,00
+                    </strong>
+                  </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </div>
+           
+            </ul>
+        </div>
+   </section>
+
+   <section>
+    <div class="container ">
+        <h2>
+            Promoções
+        </h2>
+        <ul class="container2">
+          <div class="box">
+            <li>
+                <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                <h3>
+                    Carro BMW
+                </h3>
+                <p>
+                    Câmbio automatico, 4 portas, 
+                </p>
+                <div class="price">
+                    <del>
+                        R$ 100.000,00
+                    </del>
+                    <strong>R$ 75.000,00</strong>
+                </div>
+                <button type="button">Tenho interesse</button>
+            </li>
+          </div>
+          <div class="box">
+            <li>
+                <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                <h3>
+                    Carro BMW
+                </h3>
+                <p>
+                    Câmbio automatico, 4 portas, 
+                </p>
+                <div class="price">
+                    <del>
+                        R$ 100.000,00
+                    </del>
+                    <strong>R$ 75.000,00</strong>
+                </div>
+                <button type="button">Tenho interesse</button>
+            </li>
+          </div>
+          <div class="box">
+            <li>
+                <img id="image" src="./images/images/carro-bmw.png" alt="Carro BMW">
+                <h3>
+                    Carro BMW
+                </h3>
+                <p>
+                    Câmbio automatico, 4 portas, 
+                </p>
+                <div class="price">
+                    <del>
+                        R$ 100.000,00
+                    </del>
+                    <strong>R$ 75.000,00</strong>
+                </div>
+                <button type="button">Tenho interesse</button>
+            </li>
+          </div>
+        </ul>
+    </div>
+</section>
+
+<section id="contato">
+    <div class="container">
+        <h2>
+            Entre em contato
+        </h2>
+        <form action="">
+            <div class="form-campo">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome">
+            </div>
+            <div class="form-campo">
+                <label for="telefone">Telefone:</label>
+                <input type="text" id="telefone" name="telefone">
+            </div>
+            <div class="form-campo">
+                <label for="emal">E-mail:</label>
+                <input type="text" id="email" name="email">
+            </div>
+            <div class="form-campo">
+                <label for="veiculo-de-interesse">Veiculo de interesse:</label>
+                <input type="text" id="veiculo-interesse" name="veiculo-interesse">
+            </div>
+            <div class="form-campo">
+                <label for="mensagem">Mensagem</label>
+                <textarea id="mensagem" name="mensagem"></textarea>
+            </div>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+</section>
+<footer>
+    <div class="container4">
+        <p>
+            2024 &copy; WEB Motors - Todos os direitos reservados
+        </p>
+        <ul class="container-flex">
+            <li>
+                <a href="#">
+                    <img id="foot" src="./images/icones/facebook.png" 
+                    
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img id="foot" src="./images/icones/instagram.png" alt="Instagram">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img id="foot" src="./images/icones/youtube.png" alt="Youtube">
+                </a>
+            </li>
+        </ul>
+    </div>
+</footer>
    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $("carrocel-imagens").slick({
-                autoplay: true
-            })
-        })
-    </script>
+    <script src="./masc/jquery.mask.min.js"></script>
+    <script src="./validation/jquery.validate.min.js"></script>
+    <script src="./validation/messages_pt_BR.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
